--- a/.configs/themes/newdocs/assets/_main.scss
+++ b/.configs/themes/newdocs/assets/_main.scss
@@ -254,7 +254,7 @@ main {
     z-index: 100;
     max-height: 50vh;
     width: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     @media (min-width: $mobile-breakpoint){
       position: absolute;
       top: $navbar-item-height;
@@ -329,7 +329,7 @@ main aside {
     min-width: $aside-width;
     top: $as-lg;
     // top: $navbar-item-height + $as-sm + $as-sm + $as-sm;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
   a {
     // color: inherit;
@@ -368,7 +368,7 @@ section.toc, section.git-info {
   nav {
     @media (min-width: $mobile-breakpoint) {
       max-height: 65vh ;
-      overflow-y: scroll;
+      overflow-y: auto;
     }
   }
   background: var(--fbg-200);
